kube/deploy/services/proxy/core/hubble.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: &app hubble-ui
  namespace: kube-system
spec:
  routes:
    - match: Host(`eyes.${EXTERNAL_DOMAIN}`)
      kind: Rule
      services:
        - name: *app
          port: 80
      middlewares:
        - name: authelia-authz
          namespace: authelia
  tls:
    secretName: tls-cert-eyes.${EXTERNAL_DOMAIN}
    domains:
      - main: eyes.${EXTERNAL_DOMAIN}
