kube/deploy/services/proxy/core/traefik.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: ingress
spec:
  routes:
    - match: Host(`traefik.${EXTERNAL_DOMAIN}`)
      kind: Rule
      services:
        - name: api@internal
          kind: TraefikService
      middlewares:
        - name: authelia-authz
          namespace: authelia
  tls:
    secretName: tls-cert-traefik.${EXTERNAL_DOMAIN}
    domains:
      - main: traefik.${EXTERNAL_DOMAIN}
